--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,48 @@
-.App {
+* {
   text-align: center;
+  margin: 0;
+  padding: 0;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+form {
+  width: 1170px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  margin: auto;
+  gap: 20px;
+  margin-bottom: 10px;
+}
+form input {
+  flex-basis: 80%;
+  height: 45px;
+}
+form button {
+  flex-basis: 20%;
+  margin-left: 10px;
+}
+.outerDiv {
+  width: 1170px;
+  margin: auto;
+}
+.outerDiv ul {
+  list-style: none;
+}
+.outerDiv ul li {
+  padding: 10px;
   color: white;
+  background-color: rgb(41, 2, 218);
+  text-align: left;
+  position: relative;
+  font-size: 24px;
+  margin-bottom: 20px;
+  cursor: pointer;
 }
-
-.App-link {
-  color: #61dafb;
+.outerDiv ul li span {
+  position: absolute;
+  right: 0;
+  cursor: pointer;
+  padding-right: 20px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.completetodo {
+  text-decoration: line-through;
+  line-break: anywhere;
+  background-color: rgb(219, 8, 8) !important;
 }
